Visual fixes for comment section on mobile, moved login to header bar, other small bug fixes

--- a/src/components/Blog/BlogContent.css
+++ b/src/components/Blog/BlogContent.css
@@ -202,6 +202,15 @@
     padding-left: 15px;
 }
 
+@media screen and (max-width: 800px) {
+    .comment-container {
+        padding-left: 5px;
+        padding-right: 5px;
+        margin-left: -10px;
+        margin-right: -10px
+    }
+}
+
 /* Target the top level comments, only */
 .comment-container>div {
     margin: 10px 0px 15px 0px;
